# acm-klh

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: audit.py  auth.py  chat.py  erp.py  gstn.py  ingest.py  notifications.py  reconcile.py  risk.py  stats.py
backend/app/core/: auth.py  chat_context.py  embeddings.py  graph_db.py  llm_chain.py  reconciler.py  report_generator.py  risk_model.py
backend/app/models/: gst.py
backend/app/templates/: audit_report.html
data/generator/: mock_gst_data.py  seed_neo4j.py
data/public/: GSTR-1-2023-2024.xlsx  GSTR-1-2024-2025.xlsx  GSTR-3B-2023-2024.xlsx  GSTR-3B-2024-2025.xlsx
data/sample/: einvoices.json  einvoices_012026.json  einvoices_112025.json  einvoices_122025.json  eway_bills.json  eway_bills_012026.json  eway_bills_112025.json  eway_bills_122025.json  gstr1_invoices.json  gstr1_invoices_012026.json  gstr1_invoices_112025.json  gstr1_invoices_122025.json  gstr2b_invoices.json  gstr2b_invoices_012026.json  gstr2b_invoices_112025.json  gstr2b_invoices_122025.json  gstr3b_returns.json  gstr3b_returns_012026.json  gstr3b_returns_112025.json  gstr3b_returns_122025.json  purchase_register.json  purchase_register_012026.json  (+3 more)
docs/: APPLICATION.md  CASE_STUDY_HYDERABAD_RESTAURANT_SCAM.md  JURY_PRESENTATION.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tauri-dev.sh  tsconfig.tsbuildinfo
nginx/: gst-api.niheshr.com.conf  gst.niheshr.com.conf
(+33 files in other folders)
